[package]
license = "Apache-2.0"
name = "cracked"
version = "0.1.0"
edition = "2024"
description = "Download and train your retro-engineering skills 🖳"
repository = "https://github.com/Courtcircuits/cracked"
homepage = "https://github.com/Courtcircuits/cracked"
readme = "README.md"
keywords = ["crack-me", "tui"]
categories = ["development-tools"]


[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.28.1"
ratatui = "0.29.0"
reqwest = "0.12.24"
scraper = "0.24.0"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread"] }

